Fix some spacing and layout

--- a/styles/sytle.css
+++ b/styles/sytle.css
@@ -61,31 +61,35 @@ body{
 }
 /* Set the basic elements layout */
 .container , .section-1, .section-2, .section-3{
-  border: 1px solid;
+  /* border: 1px solid; */
   text-align: center;
 }
 /* Set the main style */
 main.main-container{
-  border: 2px solid;
+  /* border: 2px solid; */
   display: grid;
   grid-template-columns: 1fr;
-  padding: 20px;
+  padding: 78px 25px;
+  gap: 30px;
+  /* margin-top: 60px; */
 }
 /* Set the first section styles */
 section.section-1 h1{
   color: var(--dark-magenta, rgb(0, 0, 0));
   font-size: 2.4rem;
-  margin-top: 60px;
-  margin-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: -8px;
 }
 section.section-1 p{
   color: var(--dark-grayish-magenta, rgb(0, 0, 0));
   line-height: 22px;
   font-weight: 400;
   font-size: 1.09rem;
+  margin-bottom: 0;
 }
 /* Set the second section styles */
 section.section-2 > ul{
+  margin: 0;
   width: 100%;
   list-style: none;
   padding: 0;
@@ -115,10 +119,10 @@ section.section-2 > ul{
 }
 /* Set the third section styles */
 section.section-3 {
-  gap: 20px
+  gap: 15px
 }
 section.section-3 > div[class*="card"]{
-  border: 1px solid;
+  /* border: 1px solid; */
   padding: 30px;
   text-align: left;
   border-radius: 10px;
